# PracticeCode

./: LICENSE
Books read/: Readme.md
Books reading completed/: Readme.md
Books reading completed/Revision Notes/: Farrier J. Data Structures and Algorithms with the C++ STL 2024.txt  High performance c++ second edition.txt  MODERN_C ++PROGRAMMING_COOK BOOK.txt  The-Art-of-Writing-Efficient-Programs-master.txt
C++/: LRUCache.cpp  ReadFilesInSS.cpp  ReadingCompressedFileSignature.cpp  VariadicLambda.cpp  assignment_hook.cpp  move.cpp  std_map_bounds.cpp
C++/C Style/: 2Dmemory allocation.cpp
C++/Lock free/: LFQueue.h  ThreadUtil.h
C++/Nested Exception/: MYException.h  NestedException.cpp
C++/ProducerConsumer/: UsingMutex.cpp
Edgewater Interview Coding Challenge/: Question1.cpp  Question2.cpp  Question3.cpp
FootballTurSim/: CMakeLists.txt  CSV.hpp  GameSim.hpp  MeanGoalPerGame.csv  ReadMe.txt  TournamentRes.csv  TournamentTeamReport.hpp  build.csh  main.cpp  tests.cpp
Leetcode/Easy/: 1071. Greatest Common Divisor of Strings.cpp  1207. Unique Number of Occurrences.cpp  125 Valid palindrome.cpp  136 Single Number.cpp  141 linked list cycle.cpp  1431. Kids With the Greatest Number of Candies.cpp  144 Binary tree preorder.cpp  145 postorder traversal.cpp  160 Intersection of 2 linked list.cpp  168 Excel sheet coloumn title.cpp  169 majority element.cpp  171 Excel sheet column number.cpp  1732. Find the Highest Altitude.cpp  1768. Merge Strings Alternately.cpp  202. Happy Number.cpp  (+63 more)
OuoterTest/: QuoterTest.cpp
Resources/: Readme.md
TinkCell/: TinkCell.sln
(+53 files in other folders)
